corrected footer navbar alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -651,7 +651,7 @@ footer .navbar-nav .nav-link {
 }
 
 footer .scroll-top {
-	font-size: 2.5rem;
+	font-size: 4rem;
 	font-weight: bold;
 	line-height: 0.5;
 }
